# AegisCoder

./: .env.example  .gitignore  AegisCoder_Master_Plan.md  README.md  main.py  pyproject.toml  pyrightconfig.json
AI/: Modelfile.local-code-7b  README.md  Start-Aider-Here.ps1  Start-Aider.ps1  Test-Ollama.ps1
engine/: aider_bridge.py  app.py  config.py  main.py  ollama_manager.py
engine/api/: routes_chat.py  routes_diff.py  routes_plan.py  routes_projects.py  websocket.py
engine/middleware/: __init__.py
engine/planning/: architect.py  executor.py  plan_schema.py
engine/projects/: models.py  registry.py  state.py
engine/safety/: deletion_guard.py  job_object.py  process_manager.py  runtime_budget.py  watchdog.py
middleware/: auth.py
scripts/: AegisCoderSetup.ps1  Build-Exe.ps1  Move-AIFolder.ps1  Run-Dev.ps1  Setup-Remote.ps1
tests/: test_aider_bridge.py  test_plan_schema.py  test_projects.py  test_reliability_bridge.py  test_safety.py
ui/: shell.py
ui/static/: index.html
ui/static/css/: app.css
ui/static/js/: app.js  chat.js  diff_viewer.js  plan.js  projects.js
