[project]
name = "aegiscoder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aider-chat>=0.86.2",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
    "pywebview>=6.2.1",
    "pywin32>=312",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
